Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57575

QBluetoothDeviceDiscoveryAgent on Bluez does not distinguish Classic and LowEnergy search

    XMLWordPrintable

Details

    Description

      QBluetoothDeviceDiscoveryAgent::start(DiscoveryMethod) permits the selection of the device search method. On Linux/Bluez the Qt implementation ignores the DiscoveryMethod parameter. The search is always done for all device types.

      A recent addition to the Bluez Adapater1 interface permit this by adding the

      SetDiscoveryFilter(dict filter)
      

      functions. Qt's implementation should make use of this function. Since it is a recent addition the implementation must work for Bluez 5 versions which do not provide this function yet.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ablasche Alex Blasche
            ablasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes