Use Bluez's SetDiscoveryFilter to control the device discovery method

Task-number: QTBUG-57575
Change-Id: Ia289bcb1e0172e74bbda7f4b2dbc904ca1f5a856
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>